Fix alignment between ELS and Events in bubble layout

--- a/res/css/views/rooms/_EventBubbleTile.scss
+++ b/res/css/views/rooms/_EventBubbleTile.scss
@@ -20,13 +20,13 @@ limitations under the License.
     --gutterSize: 11px;
     --cornerRadius: 12px;
     --maxWidth: 70%;
+    margin-right: 100px;
 }
 
 .mx_EventTile[data-layout=bubble] {
     position: relative;
     margin-top: var(--gutterSize);
     margin-left: 49px;
-    margin-right: 100px;
     font-size: $font-14px;
 
     .mx_ThreadInfo {
@@ -352,13 +352,11 @@ limitations under the License.
 .mx_EventListSummary[data-layout=bubble] {
     --maxWidth: 70%;
     margin-left: calc(var(--avatarSize) + var(--gutterSize));
-    margin-right: 94px;
+
     .mx_EventListSummary_toggle {
         float: none;
-        margin: 0;
+        margin: 0 55px 0 5px;
         order: 9;
-        margin-left: 5px;
-        margin-right: 55px;
     }
     .mx_EventListSummary_avatars {
         padding-top: 0;
@@ -370,20 +368,15 @@ limitations under the License.
     }
 
     .mx_EventTile {
-        margin: 0 6px;
+        margin: 0 0 0 6px;
         padding: 2px 0;
     }
 
     .mx_EventTile_line {
-        margin: 0;
         > a {
             // Align timestamps with those of normal bubble tiles
             left: -76px;
         }
-    }
-
-    .mx_MessageActionBar {
-        transform: translate3d(90%, 0, 0);
     }
 }
 
